# market_making_simulation

./: CMakeLists.txt  README.md  sfml_viewer.cpp
animation/: sfml_viewer.cpp
data/: output.csv
include/: Market.h  MarketMaker.h  Simulator.h
src/: MarketMaker.cpp  Simulator.cpp  main.cpp
viz/: dashboard.py  monte_carlo.py  plot_timeseries.py
